# CmakeLists.txt
project(LawnProject)

file(GLOB_RECURSE SOURCES CONFIGURE_DEPENDS
    "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp"
    "${CMAKE_CURRENT_SOURCE_DIR}/*.h"
)

# ..and the lawn files in root dir
file(GLOB LAWN_FILES
    "${CMAKE_SOURCE_DIR}/src/*.rc"
    "${CMAKE_SOURCE_DIR}/src/*.cpp"
    "${CMAKE_SOURCE_DIR}/src/*.h"

    # Todlib is a part of pvz
    "${CMAKE_SOURCE_DIR}/src/Sexy.TodLib/*.cpp"
    "${CMAKE_SOURCE_DIR}/src/Sexy.TodLib/*.h"
)
list(APPEND SOURCES ${LAWN_FILES})

# popcap...WHYYYY
set(EXCLUDE_FILES
    "${CMAKE_SOURCE_DIR}/src/Sexy.TodLib/TodDrawTriangle.cpp"
    "${CMAKE_SOURCE_DIR}/src/Sexy.TodLib/TodDrawTriangleInc.cpp"
)

foreach(EXCLUDED_FILE IN LISTS EXCLUDE_FILES)
    list(REMOVE_ITEM SOURCES "${EXCLUDED_FILE}")
endforeach()

if(ANDROID)
    add_library(${PROJECT_NAME} SHARED ${SOURCES})
    set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME "main")
elseif(IOS)
    add_executable(${PROJECT_NAME} MACOSX_BUNDLE ${SOURCES})
    set_target_properties(${PROJECT_NAME} PROPERTIES
        MACOSX_BUNDLE TRUE
        MACOSX_BUNDLE_GUI_IDENTIFIER "io.github.electr0gunner.resoddedframework;"
        MACOSX_BUNDLE_BUNDLE_NAME "LawnProject"
        MACOSX_BUNDLE_INFO_PLIST "${CMAKE_SOURCE_DIR}/ios/Info.plist.in"
        XCODE_ATTRIBUTE_TARGETED_DEVICE_FAMILY "1,2"
        XCODE_ATTRIBUTE_IPHONEOS_DEPLOYMENT_TARGET "15.0"
        XCODE_ATTRIBUTE_PRODUCT_BUNDLE_IDENTIFIER "io.github.electr0gunner.resoddedframework;"
        XCODE_ATTRIBUTE_CODE_SIGN_IDENTITY "-"
        XCODE_ATTRIBUTE_ASSETCATALOG_COMPILER_APPICON_NAME "AppIcon"
    )
    if(EXISTS "${CMAKE_SOURCE_DIR}/ios/LaunchScreen.storyboard")
        target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/ios/LaunchScreen.storyboard")
        set_source_files_properties("${CMAKE_SOURCE_DIR}/ios/LaunchScreen.storyboard"
            PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
    endif()
    if(EXISTS "${CMAKE_SOURCE_DIR}/ios/Assets.xcassets")
        target_sources(${PROJECT_NAME} PRIVATE "${CMAKE_SOURCE_DIR}/ios/Assets.xcassets")
        set_source_files_properties("${CMAKE_SOURCE_DIR}/ios/Assets.xcassets"
            PROPERTIES MACOSX_PACKAGE_LOCATION Resources)
    endif()
else()
    add_executable(${PROJECT_NAME} ${SOURCES})
endif()

target_compile_definitions(${PROJECT_NAME} PUBLIC
    $<$<BOOL:${WIN32}>:WIN32>
    $<$<CONFIG:Debug>:DEBUG>
    $<$<CONFIG:Release>:NDEBUG>
    _LIB
    DO_FIX_BUGS
    _CRT_SECURE_NO_WARNINGS

    LAWN_DEBUG_TOOLS
)

target_link_libraries(${PROJECT_NAME} PUBLIC
    SexyAppFramework
)

# Okay. Yes. We get it.
if(WIN32)
    target_link_libraries(${PROJECT_NAME} PRIVATE ws2_32 winmm)
endif()

foreach(FILE_PATH IN LISTS SOURCES)
    get_filename_component(EXT "${FILE_PATH}" EXT)
    file(RELATIVE_PATH REL_PATH "${CMAKE_SOURCE_DIR}/src" "${FILE_PATH}")

    get_filename_component(FOLDER_PATH "${REL_PATH}" PATH)
    string(REPLACE "/" "\\" FOLDER_PATH "${FOLDER_PATH}")

    if(EXT STREQUAL ".cpp" OR EXT STREQUAL ".c" OR EXT STREQUAL ".cc")
        set(BASE_GROUP "Source Files")
    elseif(EXT STREQUAL ".h" OR EXT STREQUAL ".hpp" OR EXT STREQUAL ".hh")
        set(BASE_GROUP "Header Files")
    elseif(EXT STREQUAL ".rc" OR EXT STREQUAL ".res")
        set(BASE_GROUP "Resource Files")
    else()
        set(BASE_GROUP "Other Files")
    endif()

    if(FOLDER_PATH)
        set(GROUP_NAME "${BASE_GROUP}\\${FOLDER_PATH}")
    else()
        set(GROUP_NAME "${BASE_GROUP}")
    endif()

    source_group("${GROUP_NAME}" FILES "${FILE_PATH}")
endforeach()

set(EXPORT_DIR "${CMAKE_SOURCE_DIR}/Export")

set_target_properties(${PROJECT_NAME} PROPERTIES
    RUNTIME_OUTPUT_DIRECTORY "${EXPORT_DIR}"
    RUNTIME_OUTPUT_DIRECTORY_DEBUG "${EXPORT_DIR}"
    RUNTIME_OUTPUT_DIRECTORY_RELEASE "${EXPORT_DIR}"
    RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${EXPORT_DIR}"
    RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${EXPORT_DIR}"
)

# Assets
add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
    COMMAND ${CMAKE_COMMAND}
        -DSRC="${CMAKE_SOURCE_DIR}/assets"
        -DDST="${EXPORT_DIR}"
        -DMANIFEST="${CMAKE_BINARY_DIR}/asset_manifest.txt"
        -P "${CMAKE_SOURCE_DIR}/cmake/sync_assets.cmake"
    COMMENT "Syncing assets..."
)
# DLL

if(WIN32)
    if (CMAKE_SIZEOF_VOID_P EQUAL 8)
        set(THIRDPARTY_DIR "${CMAKE_SOURCE_DIR}/thirdparty/x64")
    else()
        set(THIRDPARTY_DIR "${CMAKE_SOURCE_DIR}/thirdparty/x86")
    endif()

    set(DLLS_TO_COPY
        bass.dll
        avcodec-61.dll
        avdevice-61.dll
        avformat-61.dll
        avutil-59.dll
        swresample-5.dll
        swscale-8.dll
    )

    foreach(DLL ${DLLS_TO_COPY})
        add_custom_command(TARGET ${PROJECT_NAME} POST_BUILD
            COMMAND ${CMAKE_COMMAND} -E copy_if_different
                "${THIRDPARTY_DIR}/${DLL}"
                "${EXPORT_DIR}"
        )
    endforeach()
endif()